[gd_scene load_steps=6 format=2]

[ext_resource path="res://power_ups/power_up.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/sounds/220173__gameaudio__spacey-1up-power-up.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/materials/powerup.tres" type="Material" id=3]

[sub_resource type="SphereShape" id=3]

[sub_resource type="SphereMesh" id=4]

[node name="PowerUp" type="Spatial"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.86265e-09, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 0.715003, 0, 0, 0, 0.479803, 0, 0, 0, 0.682142, 0, 0.445711, 0 )
shape = SubResource( 3 )

[node name="GlowingSphere" type="MeshInstance" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.369303, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 3 )

[node name="Lights" type="Spatial" parent="."]

[node name="OmniLight" type="OmniLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04918, 0 )

[node name="ActivationSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
